<resources>
    <string name="app_name">ExpenseTracker</string>

    <string name="default_web_client_id">911154741660-jo7ffilpke9uqfaov9pfsre19dgg401q.apps.googleusercontent.com</string>

    <string name="back">Back</string>
    <string name="get_started">Let\'s Get Started</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint"> Confirm Password</string>
    <string name="agree_to_data_processing">I agree to processing of personal data</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_link">Already have an account? Login</string>
    <string name="back_button_desc">Back button</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_link">Forgot Password?</string>
    <string name="signup_link">Don\'t have an account? Sign up</string>
    <string name="welcome_back">Welcome Back</string>

    <string name="change_password">Change Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="submit">Submit</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_email">Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="sort_icon">Sort Icon</string>
    <string name="add_category">Add Category</string>

    <string name="category_name_hint">Category Name</string>
    <string name="pick_icon_hint">Pick an Icon</string>
    <string name="pick_color_hint">Pick a Color</string>
    <string name="description_hint">Description</string>

    <string name="more_options">More Options</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="account_settings">Account Settings</string>
    <string name="reset_data">Reset Data</string>
    <string name="help_support">Help and Support</string>


    <string name="faq">Frequently Asked Questions</string>
    <string name="faq_content">
    1. What is ExpenseTracker?
    ExpenseTracker helps you manage your finances by logging income, expenses, budgets, and generating reports.\n\n
    2. How do I add an expense or income?
    Click the floating action button, fill in details, and save.\n\n
    3. What types of reports can I generate?
    Expense and budget reports showing spending breakdowns.\n\n
    4. Where can I view reports?
    Check the Reports section.\n\n
    5. What is the Analyses section?
    Track daily and weekly trends with income, expenses, and balances and the view per day.\n\n
    6. Can I add custom categories?
    Yes, in the Categories section.\n\n
    7. How can I manage budgets?
    click button on homepage to set monthly budget and view them in budgets section.\n\n
    8. Can I edit or delete transactions?
    Yes, from Transactions or Home.\n\n
    9. Is my data secure?
    Data is securely stored with Firebase.\n\n
    10. Can I use ExpenseTracker offline?
    You need an internet connection for modifications.
</string>
    <string name="contact_support">Contact Support</string>
    <string name="contact_support_content">
    Need help? Contact us:\n\n
    Email: support@expensetracker.com\n
    Phone: +254 112277715
</string>
    <string name="submit_ticket">Submit a Ticket</string>


    <string name="error_fetching_expenses">Error fetching expenses</string>
    <string name="error_fetching_income">Error fetching income</string>
    <string name="error_fetching_budget">Error fetching budget</string>
    <string name="user_data_deleted">User data deleted except name and email</string>
    <string name="error_preserving_user_details">Error preserving user details</string>

    <string name="pick_date">Pick Date</string>
    <string name="select_date">Select Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="select_time">Select Time</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="description">Description</string>
    <string name="add_description">Add description..</string>
    <string name="save">Save</string>

    <string name="search_hint">Search...</string>
    <string name="welcome">Welcome!</string>
    <string name="expenses">Expenses</string>
    <string name="expense_result">0.00</string>
    <string name="income">Income</string>
    <string name="income_result">0.00</string>
    <string name="this_month">This month</string>
    <string name="balance_label">Balance: </string>
    <string name="balance_value">0.00</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View all</string>
    <string name="budgets">Budgets</string>
    <string name="no_budget">No budget for this month?</string>
    <string name="setting_budgets">Setting budgets helps you manage your finances and track your spending.</string>
    <string name="setup_budget">Set up a budget</string>
    <string name="transactions">Transactions</string>
    <string name="accounts">Accounts</string>
    <string name="app_logo">App Logo</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="reports">Reports</string>
    <string name="version">Version %1$s</string>
    <string name="app_description">Expense Tracker helps you manage and track your expenses effectively. It allows you to keep track of your transactions, set budgets, and gain insights into your spending habits.</string>
    <string name="developed_by">Developed by: Classic Group</string>
    <string name="contact">Contact: class.classicgroup@gmail.com</string>

    <string name="accounts_list">Accounts List</string>
    <string name="account_name">Account Name</string>
    <string name="account_balance">Account Balance</string>
    <string name="add_account">Add Account</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="account_name_hint">Account Name</string>
    <string name="initial_balance_hint">Initial Balance</string>
    <string name="save_account">Save Account</string>
    <string name="add_budget">Add Budget</string>
    <string name="budget_name_hint">Budget Name</string>
    <string name="budget_amount_hint">Budget Amount</string>
    <string name="save_budget">Save Budget</string>

    <string name="hi">Hi!</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="prompt_text">Please enter the email you used to register, and we will send a reset password link in no time.</string>

    <!-- Strings for CardView descriptions -->
        <string name="transactions_icon">Transactions</string>
        <string name="budgets_icon">Budgets</string>
        <string name="accounts_icon">Accounts</string>
        <string name="reports_icon">Reports</string>
        <string name="goals_icon">Goals</string>
        <string name="insights_icon">Insights</string>
        <string name="expense_calendar_icon">Expense Calendar</string>
        <string name="financial_health_icon">Financial Health</string>
</resources>


