<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountsActivity">

  <!-- Toolbar Section -->
  <LinearLayout
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorSecondary"
      android:orientation="horizontal"
      android:padding="16dp"
      android:gravity="center_vertical">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/accounts"
        android:textStyle="bold"
        android:textSize="20sp" />
  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_below="@id/toolbar"
      android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="wrap_content"
        android:id="@+id/accounts_list_layout"
        android:padding="16dp"
        android:orientation="vertical">

      <!-- Accounts List -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/accounts_list"
          android:textStyle="bold"
          android:textSize="18sp"
          android:layout_marginBottom="8dp" />


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="8dp"
          android:background="?attr/colorPrimary"
          android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp" />
      </LinearLayout>

      <!-- Add Account Button -->
      <Button
          android:id="@+id/add_account_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_account"
          android:layout_marginTop="16dp" />

      <!-- Add Transaction Button -->
      <Button
          android:id="@+id/add_transaction_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_transaction"
          android:layout_marginTop="8dp" />
    </LinearLayout>
</RelativeLayout>
