<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <!-- Toolbar Section -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:background="?attr/colorSecondary"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/transactionstxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textSize="20sp" />


    </LinearLayout>

    <!-- Divider Line -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/toolbar"
        android:background="?attr/colorPrimary" />

    <!-- Input Fields -->
    <LinearLayout
        android:id="@+id/input_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:textAppearance="?attr/textAppearanceBody1"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            android:textColor="?attr/colorOnSurface"
            android:gravity="start" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="16sp" />



        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:textSize="16sp" />
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/button_background"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:text="@string/change_password"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:text="@string/delete_account"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />


    </LinearLayout>

</RelativeLayout>
