<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <!-- Toolbar Section -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/about"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Divider line below the toolbar -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/toolbar"
        android:background="?attr/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/app_icon"
                android:contentDescription="@string/app_logo"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/expense_tracker"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorOnBackground" />

            <!-- App Version -->
            <TextView
                android:id="@+id/version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/version"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_marginBottom="16dp"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_marginBottom="16dp"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed_by"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/contact_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="support@example.com"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorOnBackground"
                android:autoLink="email" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
